fix: align some of the buttons and icons

--- a/CCUI.DAPPI/src/app/edit-enum-dialog/edit-enum-dialog.component.scss
+++ b/CCUI.DAPPI/src/app/edit-enum-dialog/edit-enum-dialog.component.scss
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 24px 24px 0 24px;
+    padding: 24px;
     border-bottom: vars.$divider;
     margin-bottom: 24px;
 
@@ -68,6 +68,13 @@
         &:hover {
           background-color: vars.$background-hover;
           color: vars.$text-primary;
+        }
+
+        mat-icon {
+              font-size: 16px;
+              width: max-content;
+              height: max-content;
+              margin-bottom: 8px;
         }
       }
     }
